package br.unitins.tp1.enums;

public enum Conexao {
    COM_FIO,
    SEM_FIO
}
