package br.unitins.tp1.enums;

public enum FormaPagamento {
    
    CARTAO_CREDITO,
    CARTAO_DEBITO,
    BOLETO,
    PIX
}
