package br.unitins.tp1.enums;

public enum StatusDoPedido {

    AGUARDANDO_PAGAMENTO,
    EM_PROCESSAMENTO,
    ENVIADO,
    ENTREGUE,
    CANCELADO
}
